--- a/src/main/webapp/WEB-INF/templates/system/login.html
+++ b/src/main/webapp/WEB-INF/templates/system/login.html
@@ -1,92 +1,65 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
-    <link rel="stylesheet" th:href="@{/static/application/css/global.css}"/>
-    <link rel="stylesheet" th:href="@{/static/materialize/css/materialize.min.css}"/>
-    <link rel="shoutcut icon" type="image/x-icon" href="/favicon.ico" media="all"/>
-    <title>登录 - 广告机管理后台</title>
-</head>
+<head th:include="/common/head::head('登录 - 广告机管理后台')"></head>
 <!--/*@thymesVar id="adminPath" type="java.lang.String"*/-->
+
 <body>
 <nav class="nav-extended nav-full-header" style="background-color: #37474f;">
-    <div class="nav-background">
-        <div class="pattern active" style="background-image: url('../../../static/application/image/stars.jpg');"></div>
-    </div>
-    <div class="nav-wrapper container">
-        <a href="#" itemprop="url" class="brand-logo">
-            <img src="../../../static/application/image/logo.png" class="nav-logo-img"/>
-        </a>
-    </div>
+  <div class="nav-background">
+    <div class="pattern active" style="background-image: url('../../../static/application/image/stars.jpg');"></div>
+  </div>
+  <div class="nav-wrapper container">
+    <a href="#" itemprop="url" class="brand-logo">
+      <img src="../../../static/application/image/logo.png" class="nav-logo-img"/>
+    </a>
+  </div>
 </nav>
 <!-- <editor-fold desc="login card"> -->
 <div id="login-card" class="row">
-    <div class="col s12 m6 l4 offset-m6 offset-l6">
-        <div class="card card-panel hoverable blue-grey darken-1">
-            <div class="card-content white-text">
-                <span class="card-title center-align">广告机管理后台 登录</span>
+  <div class="col s12 m6 l4 offset-m6 offset-l6">
+    <div class="card card-panel hoverable blue-grey darken-1">
+      <div class="card-content white-text">
+        <span class="card-title center-align">广告机管理后台 登录</span>
+      </div>
+      <div class="card-action">
+        <form th:action="@{${adminPath}+'/auth'}" method="post">
+          <div class="row">
+            <div class="input-field col s12 m12 l12" style="margin: 10px auto 0 auto;padding: 0 auto 0 auto;">
+              <i class="material-icons prefix">account_circle</i>
+              <input id="authname" name="authname" type="text" class="validate white-text" required="required"/>
+              <label for="authname" class="grey-text">登录账号</label>
             </div>
-            <div class="card-action">
-                <form th:action="@{${adminPath}+'/auth'}" method="post">
-                    <!-- <editor-fold desc="login input elements"> -->
-                    <div class="row">
-                        <div class="input-field col s12 m12 l12"
-                             style="margin-top: 10px;margin-bottom: 0;padding-top: 0; padding-bottom: 0;">
-                            <i class="material-icons prefix">account_circle</i>
-                            <input id="authname" name="authname" type="text" class="validate white-text"
-                                   required="required"/>
-                            <label for="authname" class="grey-text">登录账号</label>
-                        </div>
-                        <div class="input-field col s12 m12 l12"
-                             style="margin-top: 0;margin-bottom: 10px;padding-top: 0; padding-bottom: 0;">
-                            <i class="material-icons prefix">security</i>
-                            <input id="password" name="password" type="password" class="validate white-text"
-                                   required="required"/>
-                            <label for="password" class="grey-text">登录密码</label>
-                        </div>
-                    </div>
-                    <!-- </editor-fold> -->
-                    <!-- <editor-fold desc="action buttons"> -->
-                    <div class="row">
-                        <div class="col s3 m3 l3"></div>
-                        <div class="col s6 m6 l6">
-                            <button class="btn waves-effect waves-light" type="submit" name="action">登录
-                                <i class="material-icons right">send</i>
-                            </button>
-                        </div>
-                        <div class="col s2 m2 l2"></div>
-                    </div>
-                    <!-- </editor-fold> -->
-                </form>
+            <div class="input-field col s12 m12 l12" style="margin: 0 auto 10px auto;padding: 0 auto 0 auto;">
+              <i class="material-icons prefix">security</i>
+              <input id="password" name="password" type="password" class="validate white-text" required="required"/>
+              <label for="password" class="grey-text">登录密码</label>
             </div>
-        </div>
+          </div>
+          <div class="row">
+            <div class="col s3 m3 l3"></div>
+            <div class="col s6 m6 l6">
+              <button class="btn waves-effect waves-light" type="submit" name="action">登录<i
+                  class="material-icons right">send</i></button>
+            </div>
+            <div class="col s2 m2 l2"></div>
+          </div>
+        </form>
+      </div>
     </div>
+  </div>
 </div>
 <!-- </editor-fold> -->
-<footer class="page-footer" style="position: absolute; bottom: 0;background-color: #37474f;">
-    <div class="footer-copyright">
-        <div class="container">
-            © 2017 Copyright 珠海希梦电子科技有限公司
-        </div>
-    </div>
-</footer>
-
-<script type="text/javascript" src="../../../static/application/js/jquery.min.js"></script>
-<script type="text/javascript" src="../../../static/materialize/js/materialize.min.js"></script>
-<script type="text/javascript" src="../../../static/application/js/global.js"></script>
+<th:block th:include="/common/footer::footer"/>
+<th:block th:include="/common/script::script"/>
 <script type="text/javascript">
-    $(document.body).css({
-        "overflow-x": "hidden",
-        "overflow-y": "hidden"
-    });
-
-    $(function () {
-        resize_footer(window.screen.width);
-        toast('[[${message}]]');
-    });
+  $(document.body).css({
+    "overflow-x": "hidden",
+    "overflow-y": "hidden"
+  });
+  $(function () {
+    resize_footer(window.screen.width);
+    toast('[[${message}]]');
+  });
 </script>
 </body>
 </html>
