--- a/src/main/webapp/WEB-INF/templates/user/userForm.html
+++ b/src/main/webapp/WEB-INF/templates/user/userForm.html
@@ -1,16 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
-    <link rel="stylesheet" href="../../../static/application/css/global.css"/>
-    <link rel="stylesheet" href="../../../static/materialize/css/materialize.min.css"/>
-    <link rel="shoutcut icon" type="image/x-icon" href="favicon.ico" media="all"/>
-    <title>编辑广告 - 广告机管理后台</title>
-</head>
-
+<head th:include="/common/head::head('编辑用户 - 广告机管理后台')"></head>
 <!--/* <editor-fold desc="define"> */-->
 <!--/*@thymesVar id="adminPath" type="java.lang.String"*/-->
 <!--/*@thymesVar id="adminRoleID" type="java.lang.Integer"*/-->
@@ -22,202 +12,136 @@
 <!--/* </editor-fold> */-->
 
 <body>
-<header style="z-index: 1;">
-    <nav class="z-depth-2 blue-grey darken-4">
-        <div class="nav-wrapper">
-            <ul class="left">
-                <li style="height: 56px;">
-                    <a href="#" data-activates="nav-mobile" id="button-nav-menu" class="hide-on-large-only">
-                        <i class="material-icons">menu</i>
-                    </a>
-                </li>
-            </ul>
-            <ul id="nav-mobile" class="side-nav fixed" style="transform: translateX(0%);">
-                <li class="logo">
-                    <a id="logo-container" th:href="@{${adminPath}+'/main'}" class="brand-logo">
-                        <img src="../../../static/application/image/logo.png" alt="logo" class="center-block"/>
-                    </a>
-                </li>
-                <li>
-                    <a th:href="@{${adminPath}+'/main'}" class="waves-effect waves-teal">首页</a>
-                </li>
-                <li>
-                    <a th:href="@{${adminPath}+'/advertisementMachine/list/1'}" class="waves-effect waves-teal">广告机</a>
-                </li>
-                <li>
-                    <a th:href="@{${adminPath}+'/advertisement/list/1'}" class="waves-effect waves-teal">广告</a>
-                </li>
-                <li class="active" th:if="${loginUser.roleID==adminRoleID}">
-                    <a th:href="@{${adminPath}+'/user/list/1'}" class="waves-effect waves-teal">用户</a>
-                </li>
-                <li th:if="${loginUser.roleID==adminRoleID}">
-                    <a th:href="@{${adminPath}+'/role/list/1'}" class="waves-effect waves-teal">角色</a>
-                </li>
-            </ul>
-            <ul class="right">
-                <li th:text="|${loginUser.username}, 欢迎|"></li>
-                <li>
-                    <a class="dropdown-button" href="#" data-activates="dropdown-menu">
-                        <i class="material-icons right">account_circle</i>
-                    </a>
-                </li>
-            </ul>
-            <ul id="dropdown-menu" class="dropdown-content">
-                <li><a th:href="@{${adminPath}+'/logout'}" class="black-text">退出</a></li>
-            </ul>
-        </div>
-    </nav>
-</header>
+<th:block th:include="/common/header::header('user')"/>
 
 <main style="z-index: 0;">
-    <div class="page-title z-depth-1 blue-grey darken-2">
-        <div class="white-text">
-            <span class="flow-text">
-                <a class="btn-flat tooltipped" data-position="bottom" data-delay="50" data-tooltip="返回列表"
-                   onclick="history.go(-1);"><i class="material-icons white-text">arrow_back</i></a><span
-                    th:text="${user.id==newEntityID?'新增用户':user.username}"></span>
-            </span>
+  <div class="page-title z-depth-1 blue-grey darken-2">
+    <div class="white-text">
+      <span class="flow-text">
+        <a class="btn-flat tooltipped" data-position="bottom" data-delay="50" data-tooltip="返回列表"
+           onclick="history.go(-1);"><i class="material-icons white-text">arrow_back</i></a><span
+          th:text="${user.id==newEntityID?'新增用户':user.username}"></span>
+      </span>
+    </div>
+  </div>
+  <br/>
+  <div id="main-content" class="container">
+    <form th:action="@{${adminPath}+'/user/save/'+${user.id}}" method="post" onsubmit="return save();">
+      <input name="token" th:value="${token}" type="hidden"/>
+      <input id="id" name="id" type="hidden" th:value="${user.id}" class="validate" required="required"/>
+
+      <div class="row">
+        <div class="input-field col s6 m3 l3">
+          <i class="material-icons prefix">assignment_ind</i>
+          <input id="username" name="username" th:value="${user.username}" type="text" class="validate"
+                 placeholder="输入用户名" required="required"/>
+          <label for="username">用户名</label>
         </div>
-    </div>
-    <br/>
-    <div id="main-content" class="container">
-        <form th:action="@{${adminPath}+'/user/save/'+${user.id}}" method="post" onsubmit="return save();">
-            <input name="token" th:value="${token}" type="hidden"/>
-            <input id="id" name="id" type="hidden" th:value="${user.id}" class="validate" required="required"/>
-
-            <div class="row">
-                <div class="input-field col s6 m3 l3">
-                    <i class="material-icons prefix">assignment_ind</i>
-                    <input id="username" name="username" th:value="${user.username}" type="text" class="validate"
-                           placeholder="输入用户名" required="required"/>
-                    <label for="username">用户名</label>
-                </div>
-                <div class="input-field col s6 m3 l3">
-                    <i class="material-icons prefix">account_circle</i>
-                    <input th:if="${user.id==newEntityID}" id="authname" name="authname" th:value="${user.authname}"
-                           type="text" class="text" placeholder="输入登录账号" required="required"/>
-                    <label th:if="${user.id==newEntityID}" for="authname" th:text="登录名"></label>
-                    <input th:if="${user.id!=newEntityID}" id="authname-ro" name="authname" th:value="${user.authname}"
-                           type="text" class="text" readonly="readonly" placeholder="输入登录账号" required="required"/>
-                    <label th:if="${user.id!=newEntityID}" for="authname-ro" th:text="登录名"></label>
-                </div>
-                <div class="input-field col s6 m3 l3">
-                    <i class="material-icons prefix">lock_outline</i>
-                    <input th:if="${user.id==newEntityID}" id="password" name="password" th:value="${user.password}"
-                           type="password" class="text" placeholder="输入登录密码" required="required"/>
-                    <label th:if="${user.id==newEntityID}" for="password" th:text="登录密码"></label>
-                    <input th:if="${user.id!=newEntityID}" id="password-ro" name="password" th:value="${user.password}"
-                           type="password" class="text" placeholder="输入登录密码" required="required" readonly="readonly"/>
-                    <label th:if="${user.id!=newEntityID}" for="password-ro" th:text="登录密码"></label>
-                </div>
-                <div class="input-field col s6 m3 l3">
-                    <i class="material-icons prefix">lock</i>
-                    <input th:if="${user.id==newEntityID}" id="confirmPassword" name="confirmPassword"
-                           required="required" th:value="${user.password}" type="password" class="text"
-                           placeholder="重新确认密码"/>
-                    <label th:if="${user.id==newEntityID}" for="confirmPassword" th:text="确认密码"></label>
-                    <input th:if="${user.id!=newEntityID}" id="confirmPassword-ro" name="confirmPassword"
-                           th:value="${user.password}" type="password" class="text" placeholder="重新确认密码"
-                           required="required" readonly="readonly"/>
-                    <label th:if="${user.id!=newEntityID}" for="confirmPassword-ro" th:text="确认密码"></label>
-                </div>
-
-                <div class="input-field col s12 m3 l3">
-                    <i class="material-icons prefix">smartphone</i>
-                    <input id="phone" name="phone" th:value="${user.phone}" type="text" placeholder="输入手机号"/>
-                    <label for="phone">联系电话</label>
-                </div>
-                <div class="input-field col s12 m3 l3">
-                    <i class="material-icons prefix">date_range</i>
-                    <input th:if="${user.id==newEntityID}" id="addTime" name="addTime" th:value="${user.addTime}"
-                           type="text" class="date-picker" placeholder="选择加入时间"/>
-                    <label th:if="${user.id==newEntityID}" for="addTime" th:text="加入时间"></label>
-                    <input th:if="${user.id!=newEntityID}" id="addTime-ro" name="addTime" th:value="${user.addTime}"
-                           type="text" placeholder="选择加入时间" readonly="readonly"/>
-                    <label th:if="${user.id!=newEntityID}" for="addTime-ro" th:text="加入时间"></label>
-                </div>
-                <div class="input-field col s12 m3 l3">
-                    <i class="material-icons prefix">group</i>
-                    <select id="roleID" name="roleID">
-                        <option th:each="item:${roleList}" th:value="*{item.id}" th:text="*{item.name}"
-                                th:if="${item.id==user.roleID}" selected="selected"></option>
-                        <option th:each="item:${roleList}" th:value="*{item.id}"
-                                th:text="*{item.name}"></option>
-                    </select>
-                    <label for="roleID">所属角色</label>
-                </div>
-
-                <div class="input-field col s12 m12 l12">
-                    <i class="material-icons prefix">place</i>
-                    <input id="address" name="address" th:value="${user.address}" type="text" class="validate"
-                           placeholder="输入地址"/>
-                    <label for="address">地址</label>
-                </div>
-
-                <div class="input-field col s12 m12 l12">
-                    <i class="material-icons prefix">insert_comment</i>
-                    <textarea id="remark" name="remark" th:text="${user.remark}"
-                              class="materialize-textarea"></textarea>
-                    <label for="remark">备注</label>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="input-field col s6 m6 l6 right-align">
-                    <button type="reset" class="waves-effect waves-light btn">
-                        <i class="material-icons left">clear</i>清空
-                    </button>
-                </div>
-                <div class="input-field col s6 m6 l6 left-align">
-                    <button type="submit" class="waves-effect waves-light btn">
-                        <i class="material-icons right">send</i>提交
-                    </button>
-                </div>
-            </div>
-        </form>
-    </div>
+        <div class="input-field col s6 m3 l3">
+          <i class="material-icons prefix">account_circle</i>
+          <input th:if="${user.id==newEntityID}" id="authname" name="authname" th:value="${user.authname}"
+                 type="text" class="text" placeholder="输入登录账号" required="required"/>
+          <label th:if="${user.id==newEntityID}" for="authname" th:text="登录名"></label>
+          <input th:if="${user.id!=newEntityID}" id="authname-ro" name="authname" th:value="${user.authname}"
+                 type="text" class="text" readonly="readonly" placeholder="输入登录账号" required="required"/>
+          <label th:if="${user.id!=newEntityID}" for="authname-ro" th:text="登录名"></label>
+        </div>
+        <div class="input-field col s6 m3 l3">
+          <i class="material-icons prefix">lock_outline</i>
+          <input th:if="${user.id==newEntityID}" id="password" name="password" th:value="${user.password}"
+                 type="password" class="text" placeholder="输入登录密码" required="required"/>
+          <label th:if="${user.id==newEntityID}" for="password" th:text="登录密码"></label>
+          <input th:if="${user.id!=newEntityID}" id="password-ro" name="password" th:value="${user.password}"
+                 type="password" class="text" placeholder="输入登录密码" required="required" readonly="readonly"/>
+          <label th:if="${user.id!=newEntityID}" for="password-ro" th:text="登录密码"></label>
+        </div>
+        <div class="input-field col s6 m3 l3">
+          <i class="material-icons prefix">lock</i>
+          <input th:if="${user.id==newEntityID}" id="confirmPassword" name="confirmPassword" required="required"
+                 th:value="${user.password}" type="password" class="text" placeholder="重新确认密码"/>
+          <label th:if="${user.id==newEntityID}" for="confirmPassword" th:text="确认密码"></label>
+          <input th:if="${user.id!=newEntityID}" id="confirmPassword-ro" name="confirmPassword"
+                 th:value="${user.password}" type="password" class="text" placeholder="重新确认密码" required="required"
+                 readonly="readonly"/>
+          <label th:if="${user.id!=newEntityID}" for="confirmPassword-ro" th:text="确认密码"></label>
+        </div>
+        <div class="input-field col s12 m3 l3">
+          <i class="material-icons prefix">smartphone</i>
+          <input id="phone" name="phone" th:value="${user.phone}" type="text" placeholder="输入手机号"/>
+          <label for="phone">联系电话</label>
+        </div>
+        <div class="input-field col s12 m3 l3">
+          <i class="material-icons prefix">date_range</i>
+          <input th:if="${user.id==newEntityID}" id="addTime" name="addTime" th:value="${user.addTime}" type="text"
+                 class="date-picker" placeholder="选择加入时间"/>
+          <label th:if="${user.id==newEntityID}" for="addTime" th:text="加入时间"></label>
+          <input th:if="${user.id!=newEntityID}" id="addTime-ro" name="addTime" th:value="${user.addTime}" type="text"
+                 placeholder="选择加入时间" readonly="readonly"/>
+          <label th:if="${user.id!=newEntityID}" for="addTime-ro" th:text="加入时间"></label>
+        </div>
+        <div class="input-field col s12 m3 l3">
+          <i class="material-icons prefix">group</i>
+          <select id="roleID" name="roleID">
+            <option th:each="item:${roleList}" th:value="*{item.id}" th:text="*{item.name}"
+                    th:if="${item.id==user.roleID}" selected="selected"></option>
+            <option th:each="item:${roleList}" th:value="*{item.id}" th:text="*{item.name}"></option>
+          </select>
+          <label for="roleID">所属角色</label>
+        </div>
+        <div class="input-field col s12 m12 l12">
+          <i class="material-icons prefix">place</i>
+          <input id="address" name="address" th:value="${user.address}" type="text" class="validate"
+                 placeholder="输入地址"/>
+          <label for="address">地址</label>
+        </div>
+        <div class="input-field col s12 m12 l12">
+          <i class="material-icons prefix">insert_comment</i>
+          <textarea id="remark" name="remark" th:text="${user.remark}" class="materialize-textarea"></textarea>
+          <label for="remark">备注</label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="input-field col s6 m6 l6 right-align">
+          <button type="reset" class="waves-effect waves-light btn"><i class="material-icons left">clear</i>清空</button>
+        </div>
+        <div class="input-field col s6 m6 l6 left-align">
+          <button type="submit" class="waves-effect waves-light btn"><i class="material-icons right">send</i>提交</button>
+        </div>
+      </div>
+    </form>
+  </div>
 </main>
 
-<footer class="page-footer hide-on-med-and-down blue-grey darken-4" style="z-index: 1;">
-    <div class="footer-copyright">
-        <div class="container right-align">
-            © 2017 Copyright 珠海希梦电子科技有限公司
-        </div>
-    </div>
-</footer>
-
-<script type="text/javascript" src="../../../static/application/js/jquery.min.js"></script>
-<script type="text/javascript" src="../../../static/materialize/js/materialize.min.js"></script>
-<script type="text/javascript" src="../../../static/application/js/date-picker.js"></script>
-<script type="text/javascript" src="../../../static/application/js/global.js"></script>
+<th:block th:include="/common/footer::footer"/>
+<th:block th:include="/common/script::script"/>
 <script type="text/javascript">
-    $(function () {
-        resize_footer(window.screen.width);
-        $("#button-nav-menu").sideNav({
-            closeOnClick: true,
-            draggable: true
-        });
-        $(".dropdown-button").dropdown();
-        $(".date-picker").pickadatee({
-            closeOnSelect: true
-        });
-        $("#roleID").material_select();
-        toast('[[${message}]]');
+  $(function () {
+    resize_footer(window.screen.width);
+    $("#button-nav-menu").sideNav({
+      closeOnClick: true,
+      draggable: true
     });
+    $(".dropdown-button").dropdown();
+    $(".date-picker").pickadatee({
+      closeOnSelect: true
+    });
+    $("#roleID").material_select();
+    toast('[[${message}]]');
+  });
 
-    function save() {
-        // pass check
-        if ($("#password").val() !== $("#confirmPassword").val()) {
-            toast("确认密码输入不匹配登录密码");
-            return false;
-        }
-        // Phone validate
-        if (!(/^(([+])?(86)(-)?)?1[3|4|5|7|8]\d{9}$/.test($("#phone").val()))) {
-            toast("手机号格式不正确");
-            return false;
-        }
-        return true;
+  function save() {
+    // pass check
+    if ($("#password").val() !== $("#confirmPassword").val()) {
+      toast("确认密码输入不匹配登录密码");
+      return false;
     }
+    // Phone validate
+    if (!(/^(([+])?(86)(-)?)?1[3|4|5|7|8]\d{9}$/.test($("#phone").val()))) {
+      toast("手机号格式不正确");
+      return false;
+    }
+    return true;
+  }
 </script>
 </body>
 </html>
