--- a/src/main/webapp/WEB-INF/templates/common/footer.html
+++ b/src/main/webapp/WEB-INF/templates/common/footer.html
@@ -10,5 +10,11 @@
     </div>
   </footer>
 </div>
+
+<script>
+  $(function () {
+    resize_footer(window.screen.width);
+  })
+</script>
 </body>
 </html>
